<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/ListaImagenes"
        android:textSize="36sp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="301dp"
        android:layout_height="424dp"
        android:layout_marginTop="67dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:contentDescription="@string/logof"
                app:srcCompat="@drawable/iconf" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="352dp"
                android:contentDescription="@string/logoe"
                app:srcCompat="@drawable/icone" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logod"
                app:srcCompat="@drawable/icond" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="374dp"
                android:contentDescription="@string/logoc"
                app:srcCompat="@drawable/iconc" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="204dp"
                android:contentDescription="@string/logob"
                app:srcCompat="@drawable/iconb" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="285dp"
                android:contentDescription="@string/logoa"
                app:srcCompat="@drawable/icona" />

            <Button
                android:id="@+id/button"
                android:layout_width="199dp"
                android:layout_height="wrap_content"
                android:text="@string/mibtn" />

            <EditText
                android:id="@+id/txtnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ingnombre"
                android:inputType="textPersonName"
                android:autofillHints="" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Piepantalla"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</androidx.constraintlayout.widget.ConstraintLayout>